--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <a href="index.html"><img src="imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
         <!-- Start af navigations bar -->
         <nav>
             <input type="checkbox" id="menu-bar">
@@ -35,6 +36,13 @@
             </ul>
         </nav>
         <!-- Slut af navigations bar -->
+
+        <!-- Start af big photo stil med video -->
+        <video autoplay loop preload id="bigphoto" >
+            <source src="imgs/bigphotointro.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <!-- Slut på big photo -->
     </header>
     <main>
 
