Struktur på forsiden

--- a/index.html
+++ b/index.html
@@ -45,7 +45,33 @@
         <!-- Slut på big photo -->
     </header>
     <main>
-
+        <h1>Vores Bestseller</h1>
+        <section class="forside-billeder">
+            <img src="imgs/" alt="">
+            <img src="imgs/" alt="">
+            <img src="imgs/" alt="">
+            <img src="imgs/" alt="">
+        </section>
+        <!-- luft imellem sektioner -->
+        <span class="whitespace"></span>
+        <!-- slut på luft -->
+        <section>
+            <img src="imgs/" alt="">
+            <h2></h2>
+            <p></p>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <h2></h2>
+            <p></p>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <i class="fas"></i>
+            <i class="fas"></i>
+        </section>
     </main>
     <footer>
         <h2>Kontakt</h2>
