--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,32 +45,36 @@
         <!-- Slut på big photo -->
     </header>
     <main>
-        <h1>Vores Bestseller</h1>
+        <h1 class="forside-titel">Vores Bestseller</h1>
         <section class="forside-billeder">
-            <img src="imgs/" alt="">
-            <img src="imgs/" alt="">
-            <img src="imgs/" alt="">
-            <img src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
         </section>
         <!-- luft imellem sektioner -->
         <span class="whitespace"></span>
         <!-- slut på luft -->
-        <section>
-            <img src="imgs/" alt="">
-            <h2></h2>
-            <p></p>
+        <section class="reviews">
+            <img class="review-background" src="imgs/" alt="">
+            <h2 class="review-titel"></h2>
+            <p class="review-tekst"></p>
+            <!-- stjerneikoner start -->
             <i class="fas"></i>
             <i class="fas"></i>
             <i class="fas"></i>
             <i class="fas"></i>
             <i class="fas"></i>
-            <h2></h2>
-            <p></p>
+            <!-- stjerneikoner slut -->
+            <h2 class="review-titel"></h2>
+            <p class="review-tekst"></p>
+            <!-- stjerneikoner start -->
             <i class="fas"></i>
             <i class="fas"></i>
             <i class="fas"></i>
             <i class="fas"></i>
             <i class="fas"></i>
+            <!-- stjerneikoner slut -->
         </section>
     </main>
     <footer>
