--- a/index.html
+++ b/index.html
@@ -57,24 +57,28 @@
         <!-- slut på luft -->
         <section class="reviews">
             <img class="review-background" src="imgs/" alt="">
-            <h2 class="review-titel"></h2>
-            <p class="review-tekst"></p>
-            <!-- stjerneikoner start -->
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <!-- stjerneikoner slut -->
-            <h2 class="review-titel"></h2>
-            <p class="review-tekst"></p>
-            <!-- stjerneikoner start -->
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <i class="fas"></i>
-            <!-- stjerneikoner slut -->
+            <article class="review-1">
+                <h2 class="review-titel"></h2>
+                <p class="review-tekst"></p>
+                <!-- stjerneikoner start -->
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <!-- stjerneikoner slut -->
+            </article>
+            <article class="review-2">
+                <h2 class="review-titel"></h2>
+                <p class="review-tekst"></p>
+                <!-- stjerneikoner start -->
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <i class="fas"></i>
+                <!-- stjerneikoner slut -->
+            </article>
         </section>
     </main>
     <footer>
