--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo stil med video -->
-        <video autoplay loop preload id="bigphoto" >
+        <video autoplay loop id="bigphoto" >
             <source src="imgs/bigphotointro.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+            Your browser does not support the video tag. 
         </video>
         <!-- Slut på big photo -->
     </header>
