--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find din drømmebrudekjole hos os. Stort udvalg af elegante brudekjoler i alle stilarter og størrelser. Book prøvning og få ekspert rådgivning. Gratis fragt ved køb.">
     <meta name="keywords" content="Brudekjole, Brudekjoler, Vintage brudekjoler, Køb af brudekjole, Køb af brudekjoler, Brudekjole trends, Brudekjole trends 2025, Brudekjoler med lange ærmer, Brudekjole med lange ærmer og blonder, Billige brudekjoler, Billig brudekjole">
-    <link rel="icon" type="image/x-icon" href="../imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+    <link rel="icon" type="image/x-icon" href="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     <link rel="stylesheet" href="../css/style.css">
     <title>Kennedys</title>
 </head>
 <body>
     <header>
-        <a href="../index.html"><img src="../imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
+        <a href="../index.html"><img src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
         <!-- Start af navigations bar -->
         <nav>
             <input type="checkbox" id="menu-bar">
@@ -70,7 +70,7 @@
             <input type="submit" value="Indsend">
         </form>
         <!-- Slut på formular -->
-        <img src="../imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+        <img src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
