--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find din drømmebrudekjole hos os. Stort udvalg af elegante brudekjoler i alle stilarter og størrelser. Book prøvning og få ekspert rådgivning. Gratis fragt ved køb.">
     <meta name="keywords" content="Brudekjole, Brudekjoler, Vintage brudekjoler, Køb af brudekjole, Køb af brudekjoler, Brudekjole trends, Brudekjole trends 2025, Brudekjoler med lange ærmer, Brudekjole med lange ærmer og blonder, Billige brudekjoler, Billig brudekjole">
-    <link rel="icon" type="image/x-icon" href="imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+    <link rel="icon" type="image/x-icon" href="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     <link rel="stylesheet" href="css/style.css">
     <title>Kennedys</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
+        <a href="index.html"><img src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
         <!-- Start af navigations bar -->
         <nav>
             <input type="checkbox" id="menu-bar">
@@ -38,10 +38,12 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo stil med video -->
-        <video autoplay loop id="bigphoto" >
-            <source src="imgs/bigphotointro.mp4" type="video/mp4">
+        <video autoplay loop muted id="bigphoto" >
+            <source src="imgs/bigphotointro.webm" type="video/webm">
             Your browser does not support the video tag. 
         </video>
+        <h2 class="bigphototext-1">Dine Drømme</h2>
+        <h2 class="bigphototext-2">Vores Passion</h2>
         <!-- Slut på big photo -->
     </header>
     <main>
@@ -107,7 +109,7 @@
             <input type="submit" value="Indsend">
         </form>
         <!-- Slut på formular -->
-        <img src="imgs/logo.endelig.png" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+        <img src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
