--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
         <!-- Start af navigations bar -->
         <nav>
+            <a href="index.html"><img  class="left-icon" src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><img src="" alt="Tre streger der åbner menuen"></label>
             <ul>
@@ -38,12 +38,14 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo stil med video -->
-        <video autoplay loop muted id="bigphoto" >
-            <source src="imgs/bigphotointro.webm" type="video/webm">
-            Your browser does not support the video tag. 
-        </video>
-        <h2 class="bigphototext-1">Dine Drømme</h2>
-        <h2 class="bigphototext-2">Vores Passion</h2>
+        <section class="cover">
+            <video autoplay loop muted id="bigphoto" >
+                <source src="imgs/bigphotointro.webm" type="video/webm">
+                Your browser does not support the video tag. 
+            </video>
+            <h2 class="bigphototext-1">Dine Drømme</h2>
+            <h2 class="bigphototext-2">Vores Passion</h2>
+        </section>
         <!-- Slut på big photo -->
     </header>
     <main>
