--- a/html/booking.html
+++ b/html/booking.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <a href="../index.html"><img src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
         <!-- Start af navigations bar -->
         <nav>
+            <a href="index.html"><img  class="left-icon" src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><img src="" alt="Tre streger der åbner menuen"></label>
             <ul>
