udkast til footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2 class="bigphototext-2">Vores Passion</h2>
         </section>
         <!-- Slut på big photo -->
-         
+
         <!-- Start af navigations bar -->
         <nav>
             <a href="index.html"><img  class="left-icon" src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
@@ -89,6 +89,19 @@
         </section>
     </main>
     <footer>
+        <h2>Book en tid</h2>
+         <!-- Formular til at booke en tid -->
+         <form>
+            <label for="navn">Navn</label>
+            <input type="text" id="navn" name="navn">
+            <label for="e-mail">E-mail</label>
+            <input type="text" id="e-mail" name="e-mail">
+            <label for="telefon">Telefon nr</label>
+            <input type="text" id="telefon" name="telefon">
+            <input type="submit" value="Indsend">
+        </form>
+        <!-- Slut på formular -->
+
         <h2>Kontakt</h2>
         <ul>
             <li>Kennedys</li>
@@ -103,18 +116,8 @@
             <li>E-mail: </li>
             <li>salonen@kennedys.dk</li>
         </ul>
-        <!-- Formular til at booke en tid -->
-        <form>
-            <label for="navn">Navn</label>
-            <input type="text" id="navn" name="navn">
-            <label for="e-mail">E-mail</label>
-            <input type="text" id="e-mail" name="e-mail">
-            <label for="telefon">Telefon nr</label>
-            <input type="text" id="telefon" name="telefon">
-            <input type="submit" value="Indsend">
-        </form>
-        <!-- Slut på formular -->
-        <img src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+       
+        <img src="imgs/logo.footer.png" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
