Opstilling af struktur på kategori filen

--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -42,6 +42,14 @@
         <!-- Slut på big photo -->
     </header>
     <main>
+        <h1 class="Kategori titel">Kategorier</h1>
+        <section class="kategori-billeder"></section>
+            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/" alt="">
+        </section>
+        
 
     </main>
     <footer>
