ændring af class

--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -44,13 +44,13 @@
     <main>
         <h1 class="Kategori titel">Kategorier</h1>
         <section class="kategori-billeder"></section>
-            <img class="Matrialer" src="imgs/" alt="">
-            <img class="Prinsesse" src="imgs/" alt="">
-            <img class="A-facon" src="imgs/" alt="">
-            <img class="Havfrue" src="imgs/" alt="">
-            <img class="Stropløs" src="imgs/" alt="">
-            <img class="Lange ærmer" src="imgs/" alt="">
-            <img class="Dyb ryg" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
+            <img class="Kategorier" src="imgs/" alt="">
         </section>
         
 
