--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -44,13 +44,39 @@
     <main>
         <h1 class="Kategori titel">Kategorier</h1>
         <section class="kategori-billeder"></section>
-            <img class="Kategorier" src="imgs/" alt="">
-            <img class="Kategorier" src="imgs/" alt="">
-            <img class="Kategorier" src="imgs/" alt="">
-            <img class="Kategorier" src="imgs/" alt="">
-            <img class="Kategorier" src="imgs/" alt="">
-            <img class="Kategorier" src="imgs/" alt="">
-            <img class="Kategorier" src="imgs/" alt="">
+        
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">MATRIALER</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">PRINSESSE</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">A-FACON</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">HAVFRUE</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">FIT AND FLARE</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">STROPLØS</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">LANGE ÆRMER</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="Kategorier" src="" alt="">
+            <figcaption class="overlay-text">DYB RYG</figcaption>
+        </figure>
         </section>
         
 
