struktur på matriale siden i html

--- a/html/materialer.html
+++ b/html/materialer.html
@@ -43,6 +43,43 @@
     </header>
     <main>
 
+        <h1 class="matrialer titel">Matrialer</h1>
+        <img href="" alt="">
+        <section class="matriale-billeder"></section>
+        
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">CHIFFON</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">ORGANZA</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">SATIN</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">TYL</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">CREPE</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">BLONDER</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">MIKADO</figcaption>
+        </figure>
+        <figure class="billede-box">
+            <img class="matrialer" src="" alt="">
+            <figcaption class="overlay-text">PERLER</figcaption>
+        </figure>
+        </section>
     </main>
     <footer>
         <h2>Kontakt</h2>
