--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -13,7 +13,7 @@
     <header>
         <!-- Start af navigations bar -->
         <nav>
-            <a href="index.html"><img  class="left-icon" src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
+            <a href="index.html"><img  class="left-icon" src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><img src="" alt="Tre streger der åbner menuen"></label>
             <ul>
@@ -43,43 +43,43 @@
     </header>
     <main>
         <h1 class="Kategori titel">Kategorier</h1>
-        <section class="kategori-billeder"></section>
-        
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">MATRIALER</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">PRINSESSE</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">A-FACON</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">HAVFRUE</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">FIT AND FLARE</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">STROPLØS</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">LANGE ÆRMER</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="Kategorier" src="" alt="">
-            <figcaption class="overlay-text">DYB RYG</figcaption>
-        </figure>
+        <section class="kategori-billeder">
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">MATRIALER</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">PRINSESSE</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">A-FACON</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">HAVFRUE</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">FIT AND FLARE</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">STROPLØS</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">LANGE ÆRMER</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="Kategorier" src="" alt="">
+                <figcaption class="overlay-text">DYB RYG</figcaption>
+            </figure>
         </section>
         
     </main>
+
     <footer>
         <h2>Kontakt</h2>
         <ul>
