--- a/html/materialer.html
+++ b/html/materialer.html
@@ -13,7 +13,7 @@
     <header>
         <!-- Start af navigations bar -->
         <nav>
-            <a href="index.html"><img  class="left-icon" src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
+            <a href="index.html"><img  class="left-icon" src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><img src="" alt="Tre streger der åbner menuen"></label>
             <ul>
@@ -41,46 +41,47 @@
         <img href="" alt="">
         <!-- Slut på big photo -->
     </header>
+
     <main>
 
         <h1 class="matrialer titel">Matrialer</h1>
         <img href="" alt="">
-        <section class="matriale-billeder"></section>
-        
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">CHIFFON</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">ORGANZA</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">SATIN</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">TYL</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">CREPE</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">BLONDER</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">MIKADO</figcaption>
-        </figure>
-        <figure class="billede-box">
-            <img class="matrialer" src="" alt="">
-            <figcaption class="overlay-text">PERLER</figcaption>
-        </figure>
+        <section class="matriale-billeder">
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">CHIFFON</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">ORGANZA</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">SATIN</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">TYL</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">CREPE</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">BLONDER</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">MIKADO</figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="matrialer" src="" alt="">
+                <figcaption class="overlay-text">PERLER</figcaption>
+            </figure>
         </section>
     </main>
+
     <footer>
         <h2>Kontakt</h2>
         <ul>
