--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
             <a href="index.html"><img  class="left-icon" src="imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
             <input type="checkbox" id="menu-bar">
-            <label for="menu-bar"><img src="" alt="Tre streger der åbner menuen"></label>
+            <label for="menu-bar"><img src="imgs/burger-menu-svgrepo-com.svg" alt="Tre streger der åbner menuen"></label>
             <ul>
                 <li><a href="html/services.html">Services</a></li>
                 <li><a href="html/booking.html">Booking</a></li>
