--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -43,15 +43,56 @@
     </header>
     <main>
         <h1 class="prinsesse-titel">PRINSESSE</h1>
-        <section class="prinsesse-billeder">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
-            <img class="prinsesse" src="imgs/" alt="">
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+                </figcaption>
+        <figure class="billede-box">
+            <img class="prinsesse" src="" alt="">
+            <figcaption class="overlay-text">
+                <h2></h2>
+                <p></p>
+            </figcaption>
+
+
     </main>
     <footer>
         <h2>Kontakt</h2>
