--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
         <!-- Slut på formular -->
 
         <h2>Kontakt</h2>
-        <ul>
+        <ul class="kontakt1">
             <li>Kennedys</li>
             <li>Astervej 9</li>
             <li>8471 Sabro</li>
             <li>Danmark</li>
             <li>CVR-nummer: 28934874</li>
         </ul>
-        <ul>
+        <ul class="kontakt2">
             <li>Telefon nr:</li>
             <li>+4586495200</li>
             <li>E-mail: </li>
