--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -13,17 +13,17 @@
     <header>
         <!-- Start af navigations bar -->
         <nav>
-            <a href="index.html"><img  class="left-icon" src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
+            <a href="../index.html"><img  class="left-icon" src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
             <input type="checkbox" id="menu-bar">
-            <label for="menu-bar"><img src="imgs/burger-menu-svgrepo-com.svg" alt="Tre streger der åbner menuen"></label>
+            <label for="menu-bar"><img src="../imgs/burger-menu-svgrepo-com.svg" alt="Tre streger der åbner menuen"></label>
             <ul>
-                <li><a href="html/services.html">Services</a></li>
-                <li><a href="html/booking.html">Booking</a></li>
-                <li><a href="html/kategorier.html">kategorier</a>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="booking.html">Booking</a></li>
+                <li><a href="kategorier.html">kategorier</a>
                     <!-- Fold ud menu når man hover over kategorier -->
                     <ul>
-                        <li><a href="html/materialer.html">Materialer</a></li>
-                        <li><a href="html/prinsesse.html">Prinsesse</a></li>
+                        <li><a href="materialer.html">Materialer</a></li>
+                        <li><a href="prinsesse.html">Prinsesse</a></li>
                         <li><a>A-facon</a></li>
                         <li><a>Fit and flare</a></li>
                         <li><a>Havfrue</a></li>
@@ -32,7 +32,7 @@
                         <li><a>Dyb ryg</a></li>
                     </ul></li>
                     <!-- Slut på fold ud menu -->
-                <li><a href="html/kontakt.html">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <!-- Slut af navigations bar -->
