--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -45,35 +45,35 @@
         <h1 class="Kategori titel">Kategorier</h1>
         <section class="kategori-billeder">
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/matrialer-kategori-billede.png" alt="Brudekjole med sløjfe">
                 <figcaption class="overlay-text">MATRIALER</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/prinsesse-kategori-billede.png" alt="Prinsesse brudekjole">
                 <figcaption class="overlay-text">PRINSESSE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/a-facon-kategori-billede.png" alt="A-facon brudekjole">
                 <figcaption class="overlay-text">A-FACON</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/havfrue-kategori-billede.png" alt="Brudekjole havfrue">
                 <figcaption class="overlay-text">HAVFRUE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/fitandflare-kategori-billede.png" alt="tætsiddende brudekjole">
                 <figcaption class="overlay-text">FIT AND FLARE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/stropløs-kategori-billede.png" alt="Stropløs brudekjole">
                 <figcaption class="overlay-text">STROPLØS</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/langeærmer-kategori-billede.png" alt="Brudekjole med lange ærmer">
                 <figcaption class="overlay-text">LANGE ÆRMER</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="" alt="">
+                <img class="Kategorier" src="../imgs/dybryg-kategori-billede.png" alt="Brudekjole med dyb ryg">
                 <figcaption class="overlay-text">DYB RYG</figcaption>
             </figure>
         </section>
