udfyldning af html kategorisiden

--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -38,7 +38,7 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo-->
-        <img href="" alt="">
+        <img src="../imgs/big-photo-kategori.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
         <!-- Slut på big photo -->
     </header>
     <main>
