--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -38,60 +38,60 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo-->
-        <img href="" alt="">
+        <img src="../imgs/big-photo-prinsesse.webp" alt="Kvinde set fra ryggen med stropløs brudekjole på">
         <!-- Slut på big photo -->
     </header>
     <main>
         <h1 class="prinsesse-titel">PRINSESSE</h1>
         <section class="prinsesse-billeder">
             <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
+                <img class="prinsesse" src="../imgs/prisesse-billede1.webp" alt="Kvinde står i en have med en stropløs brudekjole på set fra siden">
                 <figcaption class="overlay-text">
                     <h2></h2>
                     <p></p>
                 </figcaption>
             <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
+                <img class="prinsesse" src="../imgs/prinsesse-billede2.webp" alt="Kvinde iført brudekjole med puffærmer står i et rum set fra siden">
                 <figcaption class="overlay-text">
                     <h2></h2>
                     <p></p>
                 </figcaption>
             <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
+                <img class="prinsesse" src="../imgs/prinsesse-billede3.webp" alt="Kvinde står i en have med brudekjole på set fra fronten">
                 <figcaption class="overlay-text">
                     <h2></h2>
                     <p></p>
                 </figcaption>
             <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
+                <img class="prinsesse" src="../imgs/prinsesse-billede4.webp" alt="Kvinde iført brudekjole med blomsterprint står i en gårdsplads med ryggen til">
+                <figcaption class="overlay-text">
+                    <h2></h2>
+                    <p></p>
+                </figcaption>
+                <figure class="billede-box">
+                    <img class="prinsesse" src="../imgs/prinsesse-billede5.webp" alt="Kvinde iført stropløsbrudekjole står ved en væg fronten til">
+                    <figcaption class="overlay-text">
+                        <h2></h2>
+                        <p></p>
+                    </figcaption>
+            <figure class="billede-box">
+                <img class="prinsesse" src="../imgs/prinsesse-billede6.webp" alt="Kvinde iført stropløsbrudekjole med blonder står i en gård med ryggen til">
                 <figcaption class="overlay-text">
                     <h2></h2>
                     <p></p>
                 </figcaption>
             <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
+                <img class="prinsesse" src="../imgs/prinsesse-billede7.webp" alt="Kvinde iført brudekjole med tyldetalje ved hoften, står på gaden med fronten til">
                 <figcaption class="overlay-text">
                     <h2></h2>
                     <p></p>
                 </figcaption>
             <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
-                <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
-                </figcaption>
-            <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
+                <img class="prinsesse" src="../imgs/prinsesse-billede8.webp" alt="Kvinde iført brudekjole står i et vindue med fronten til">
                 <figcaption class="overlay-text">
                     <h2></h2>
                     <p></p>
                     </figcaption>
-            <figure class="billede-box">
-                <img class="prinsesse" src="" alt="">
-                <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
-                </figcaption>
             </section>
     </main>
     <footer>
