--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
                 <li><a href="html/services.html">Services</a></li>
                 <li><a href="html/booking.html">Booking</a></li>
-                <li><a href="html/kategorier.html">kategorier</a>
+                <li><a href="html/kategorier.html">Kategorier</a>
                     <!-- Fold ud menu når man hover over kategorier -->
                     <ul>
                         <li><a href="html/materialer.html">Materialer</a></li>
@@ -54,10 +54,10 @@
     <main>
         <h1 class="forside-titel">Vores Bestseller</h1>
         <section class="forside-billeder">
-            <img class="bestseller" src="imgs/" alt="">
-            <img class="bestseller" src="imgs/" alt="">
-            <img class="bestseller" src="imgs/" alt="">
-            <img class="bestseller" src="imgs/" alt="">
+            <img class="bestseller" src="imgs/bestseller-billede1.webp" alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top">
+            <img class="bestseller" src="imgs/bestseller-billede2.webp" alt="Billede af en brudekjole model der står i en slots have, iført en brudekjole med blad design på kjolen">
+            <img class="bestseller" src="imgs/bestseller-billede3.webp" alt="Billede af en brudekjole model der står med ryggen til kamaraet, iført en kjole med blomster detajler">
+            <img class="bestseller" src="imgs/bestseller-billede4.webp" alt="Billede af en brudekjole model der står foran en metal port, iført en detaljeret kjole med massere af tyl i bunden">
         </section>
         <!-- luft imellem sektioner -->
         <span class="whitespace"></span>
@@ -65,25 +65,35 @@
         <section class="reviews">
             <img class="review-background" src="imgs/" alt="">
             <article class="review-1">
-                <h2 class="review-titel"></h2>
-                <p class="review-tekst"></p>
+                <h2 class="review-titel">Skønneste team</h2>
+                <p class="review-tekst">Havde prøvet ikke mindre end 30 kjoler før jeg fandt jer. Havde følelsen af ikke at blive 
+                    mødt og vejledt .Jeg var grædefærdig og havde næsten opgivet projektet . 
+                    Signe hjalp mig igennem min proces og hun er simpelt intet mindre end vanvittig 
+                    professionel, nærværende , empatisk og skide 
+                    sjov! Jeg har fundet kjolen ved jer , min kjole. Tak for 
+                    jeres fantastiske profesionelle indsats og i gør alt for at det hele kan 
+                    lykkedes og man sammen kommer i mål så tak.</p>
                 <!-- stjerneikoner start -->
-                <i class="fas"></i>
-                <i class="fas"></i>
-                <i class="fas"></i>
-                <i class="fas"></i>
-                <i class="fas"></i>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
                 <!-- stjerneikoner slut -->
             </article>
             <article class="review-2">
-                <h2 class="review-titel"></h2>
-                <p class="review-tekst"></p>
+                <h2 class="review-titel">Min drømme kjole</h2>
+                <p class="review-tekst">Jeg fandt min drømmebrudekjole hos Kennedys. De var rigtig dygtige 
+                    til at hjælpe mig med at finde, hvad der passer godt til min krop og 
+                    kropsfacon - og rådgive efter det og min stil. 
+                    Jeg ville ønske, at jeg kunne huske, hvad hende fra Kennedys, 
+                    som hjalp mig, hedder, for hun var rigtig dygtig.</p>
                 <!-- stjerneikoner start -->
-                <i class="fas"></i>
-                <i class="fas"></i>
-                <i class="fas"></i>
-                <i class="fas"></i>
-                <i class="fas"></i>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <img class="fas" src="imgs/star-icon-full.svg"></img>
                 <!-- stjerneikoner slut -->
             </article>
         </section>
